[package]
name = "k8s"
description = "k8s experiments"
version = "0.1.0"
edition = "2021"

# --------------------------------------------------------------------------------------------------

[dependencies]
anyhow = "1"
kube = { version = "0.86.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.3"

[profile.release]
debug = 1

[dev-dependencies]
